syntax = "proto3";

package objectdetection;

service ObjectDetection {
    rpc Detect(stream DetectRequest) returns (stream DetectResponse);
}

message DetectRequest {
    string uuid = 1; // Unique identifier
    bytes image = 2; // Image data
}

message DetectResponse {
    string uuid = 1; // Unique identifier
    repeated Object objects = 2;
}

message Object {
    string name = 1;
    float confidence = 2;
    repeated float bounding_box = 3; // [x, y, width, height]
}
